--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,7 @@ path = "src/lib.rs"
 name = "rtbin"
 path = "src/main.rs"
 
-[dependencies]
+[dependencies.sdl2]
+version = "0.31.0"
+default-features = false
+features = ["gfx"]
